--- a/configuration.yaml
+++ b/configuration.yaml
@@ -12,7 +12,8 @@ homeassistant:
   customize: !include customize.yaml
   packages:
     package_camera0: !include packages/dahua-cameras.yaml
-    pack_hottub: !include packages/hottub.yaml
+    package_hottub: !include packages/hottub.yaml
+    package_washing_machine: !include packages/washing-machine.yaml
 
     package_lounge_media_dimming: !include packages/lounge-media-dimming.yaml
     package_ballroom_media_dimming: !include packages/ballroom-media-dimming.yaml
