--- a/packages/washing-machine.yaml
+++ b/packages/washing-machine.yaml
@@ -1,8 +1,40 @@
+# Washing Machine UI entity (read-only)
+#
+# Triggered by automation.washing_machine_started
+# and automation.washing_machine_stopped
+#
+binary_sensor:
+- name: washing_machine
+  platform: mqtt
+  state_topic: ha/event/washing-machine
+  payload_on: 'on'
+  payload_off: 'off'
+  initial: off
+
+# Debouncing for hottub and washing-machine power monitors
+# Trigger corresponding binary_sensors via automation+mqtt
+input_boolean:
+  washing_machine_debouncer:
+    name: "Washing Machine Debouncer"
+    initial: off
+
+group:
+  g_washing_machine:
+    name: Washing Machine
+    icon: mdi:washing-machine
+    entities:
+    - binary_sensor.washing_machine
+    - switch.greenwave_powernode_54_switch
+    - sensor.greenwave_powernode_54_energy
+    - sensor.greenwave_powernode_54_power
+
+
 # Power detection for the washing machine.
 # Debounce numeric_state with an input_boolean.
 #
 # Cycle determined empirically from event data
 #
+automation:
 - alias: 'Washing Machine Hi'
   trigger:
     platform: numeric_state
