--- a/people/jerome.yaml
+++ b/people/jerome.yaml
@@ -3,4 +3,6 @@ control: hidden
 entities:
 - device_tracker.jerome_phone
 - device_tracker.jerome_android
+- device_tracker.jerome_android_bt
+- device_tracker.jdilley_macbookpro
 - sensor.js_bedroom_present
