--- a/network.yaml
+++ b/network.yaml
@@ -13,12 +13,15 @@ entities:
 - device_tracker.hastur
 - device_tracker.study
 - device_tracker.kitchen
+- device_tracker.echowee_bt
 - device_tracker.ballroom
 - device_tracker.lounge
 - device_tracker.library
 - device_tracker.bedroommark
 - device_tracker.loungetv
 - device_tracker.ballroomamp
+- device_tracker.tado
+
 # printers
 - device_tracker.ricoh213w
 - device_tracker.canonmg5550
