--- a/people/jerome.yaml
+++ b/people/jerome.yaml
@@ -4,5 +4,7 @@ entities:
 - device_tracker.jerome_phone
 - device_tracker.jerome_android
 - device_tracker.jerome_android_bt
-- device_tracker.jdilley_macbookpro
+#- device_tracker.jdilley_macbookpro
+- device_tracker.jerome_asus
+- device_tracker.jerome_asus_bt
 - sensor.js_bedroom_present
