--- a/configuration.yaml
+++ b/configuration.yaml
@@ -15,16 +15,15 @@ homeassistant:
     package_hottub: !include packages/hottub.yaml
     package_washing_machine: !include packages/washing-machine.yaml
 
-    #package_study: !include packages/study/package.yaml
+    package_study: !include packages/study/package.yaml
     package_kitchen: !include packages/kitchen/package.yaml
     package_hall: !include packages/hall/package.yaml
-    #package_lounge: !include packages/lounge/package.yaml
-    #package_library: !include packages/library/package.yaml
-    #package_ballroom: !include packages/ballroom/package.yaml
+    package_lounge: !include packages/lounge/package.yaml
+    package_library: !include packages/library/package.yaml
+    package_ballroom: !include packages/ballroom/package.yaml
     #package_armoury: !include packages/armoury/package.yaml
-    #package_guest_room: !include packages/guest_room/package.yaml
+    package_guest_room: !include packages/guest_room/package.yaml
     #package_bedroom_mark: !include packages/bedroom_mark/package.yaml
-    #package_kitchen: !include packages/kitchen/package.yaml
     #package_kitchen: !include packages/kitchen/package.yaml
 
     package_lounge_media_dimming: !include packages/lounge-media-dimming.yaml
