--- a/packages/lounge/package.yaml
+++ b/packages/lounge/package.yaml
@@ -1,3 +1,4 @@
+homeassistant: !include homeassistant.yaml
 group: !include groups.yaml
 climate: !include climate.yaml
 input_select: !include input_select.yaml
