--- a/packages/hall/package.yaml
+++ b/packages/hall/package.yaml
@@ -3,5 +3,5 @@ group: !include groups.yaml
 #input_select: !include input_select.yaml
 #scene: !include scenes.yaml
 #sensor: !include sensors.yaml
-#switch: !include switches.yaml
+switch: !include switches.yaml
 #automation: !include_dir_merge_list automations
