--- a/configuration.yaml
+++ b/configuration.yaml
@@ -14,6 +14,7 @@ homeassistant:
     package_camera0: !include packages/dahua-cameras.yaml
     package_hottub: !include packages/hottub.yaml
     package_washing_machine: !include packages/washing-machine.yaml
+    package_stream_radio: !include packages/stream-radio.yaml
 
     package_study: !include packages/study/package.yaml
     package_kitchen: !include packages/kitchen/package.yaml
