--- a/configuration.yaml
+++ b/configuration.yaml
@@ -10,11 +10,17 @@ homeassistant:
   time_zone: Europe/London
 
   customize: !include customize.yaml
+  packages:
+    package_camera0: !include packages/dahua-cameras.yaml
+
 
 # Discover some devices automatically
 discovery:
 
 zone: !include zone.yaml
+
+# Deps: camera
+ffmpeg:
 
 # Allows you to issue voice commands from the frontend
 conversation:
