--- a/configuration.yaml
+++ b/configuration.yaml
@@ -11,6 +11,7 @@ homeassistant:
 
   customize: !include customize.yaml
   packages:
+    package_aeotec_multisensor: !include packages/aeotec_multisensor.yaml
     package_camera0: !include packages/dahua-cameras.yaml
     package_hottub: !include packages/hottub.yaml
     package_washing_machine: !include packages/washing-machine.yaml
