--- a/packages/bedroom-jerome/package.yaml
+++ b/packages/bedroom-jerome/package.yaml
@@ -3,3 +3,4 @@ group: !include groups.yaml
 scene: !include scenes.yaml
 sensor: !include sensors.yaml
 switch: !include switches.yaml
+automation: !include_dir_merge_list automations
