--- a/packages/study/package.yaml
+++ b/packages/study/package.yaml
@@ -5,4 +5,4 @@ group: !include groups.yaml
 scene: !include scenes.yaml
 sensor: !include sensors.yaml
 switch: !include switches.yaml
-#automation: !include_dir_merge_list automations
+automation: !include_dir_merge_list automations
