packages: order of study_scenes

--- a/packages/guest_room/homeassistant.yaml
+++ b/packages/guest_room/homeassistant.yaml
@@ -1,4 +1,7 @@
 customize:
+  group.guest_room_scenes:
+    order: 0
+
   script.hue_guest_room_thermostat:
     friendly_name: "Guest Room Thermostat"
 
