--- a/packages/bedroom-mark/homeassistant.yaml
+++ b/packages/bedroom-mark/homeassistant.yaml
@@ -1,4 +1,7 @@
 customize:
+  group.marks_bedroom_scenes:
+    order: 0
+
   light.bedroom_mark_overhead_level:
     friendly_name: "Mark's Bedroom Overhead"
   light.bedroom_mark_level_29:
