--- a/people/anne.yaml
+++ b/people/anne.yaml
@@ -3,5 +3,5 @@ entities:
 - device_tracker.anne_phone
 - device_tracker.anne_iphone2
 - device_tracker.anne_iphone2_bt
-- device_tracker.anne_ipad
 - device_tracker.anniehp
+#- device_tracker.anne_ipad
