--- a/thermostats/static_thermostats.yaml
+++ b/thermostats/static_thermostats.yaml
@@ -17,7 +17,7 @@
 
 - name: lounge_east_thermostat
   platform: generic_thermostat
-  heater: switch.lounge_demand
+  heater: switch.lounge_east_demand
   target_sensor: sensor.lounge_east_temperature
   max_temp: 25
   min_temp: 5
