--- a/configuration.yaml
+++ b/configuration.yaml
@@ -12,6 +12,7 @@ homeassistant:
   customize: !include customize.yaml
   packages:
     package_camera0: !include packages/dahua-cameras.yaml
+    package_lounge_media_dimming: !include packages/lounge-media-dimming.yaml
 
 
 # Discover some devices automatically
