Ballroom media dimming
Just need to add group.g_ballroom_media_dimming to the UI

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -13,6 +13,7 @@ homeassistant:
   packages:
     package_camera0: !include packages/dahua-cameras.yaml
     package_lounge_media_dimming: !include packages/lounge-media-dimming.yaml
+    package_ballroom_media_dimming: !include packages/ballroom-media-dimming.yaml
 
 
 # Discover some devices automatically
