--- a/packages/bedroom-mark-media-dimming.yaml
+++ b/packages/bedroom-mark-media-dimming.yaml
@@ -22,7 +22,7 @@ input_slider:
     step: 5
 
 automation:
-- alias: "Dim on Media Playing"
+- alias: "Bedroom Mark Dim on Media Playing"
   trigger:
     - platform: state
       entity_id: media_player.marks_bedroom
@@ -33,8 +33,9 @@ automation:
   condition:
     condition: and
     conditions:
-      - condition: sun
-        after: sunset
+      - condition: state
+        entity_id: sun.sun
+        state: 'below_horizon'
       - condition: state
         entity_id: input_boolean.bedroom_mark_media_dimming_enable
         state: 'on'
@@ -50,7 +51,7 @@ automation:
       transition: '2'
 
 
-- alias: "Dim on Media Paused"
+- alias: "Bedroom Mark Dim on Media Paused"
   trigger:
     - platform: state
       entity_id: media_player.marks_bedroom
@@ -59,8 +60,9 @@ automation:
   condition:
     condition: and
     conditions:
-      - condition: sun
-        after: sunset
+      - condition: state
+        entity_id: sun.sun
+        state: 'below_horizon'
       - condition: state
         entity_id: input_boolean.bedroom_mark_media_dimming_enable
         state: 'on'
@@ -75,7 +77,7 @@ automation:
       brightness_pct: '50'
       transition: '3'
 
-- alias: "Dim on Media Stopped"
+- alias: "Bedroom Mark Dim on Media Stopped"
   trigger:
     - platform: state
       entity_id: media_player.marks_bedroom
@@ -85,8 +87,9 @@ automation:
   condition:
     condition: and
     conditions:
-      - condition: sun
-        after: sunset
+      - condition: state
+        entity_id: sun.sun
+        state: 'below_horizon'
       - condition: state
         entity_id: input_boolean.bedroom_mark_media_dimming_enable
         state: 'on'
