--- a/packages/lounge-media-dimming.yaml
+++ b/packages/lounge-media-dimming.yaml
@@ -51,7 +51,7 @@ automation:
             state: 'on'
           - condition: template
             value_template: >
-              {{ states.media_player.lounge.attributes.media_content_type == "movie" }}
+              {{ trigger.to_state.attributes.media_content_type == "movie" }}
         - condition: and
           conditions:
           - condition: state
@@ -59,7 +59,7 @@ automation:
             state: 'on'
           - condition: template
             value_template: >
-              {{ states.media_player.lounge.attributes.media_content_type == "tvshow" }}
+              {{ trigger.to_state.attributes.media_content_type == "tvshow" }}
 
   action:
     service: light.turn_on
@@ -93,7 +93,7 @@ automation:
             state: 'on'
           - condition: template
             value_template: >
-              {{ states.media_player.lounge.attributes.media_content_type == "movie" }}
+              {{ trigger.to_state.attributes.media_content_type == "movie" }}
         - condition: and
           conditions:
           - condition: state
@@ -101,7 +101,7 @@ automation:
             state: 'on'
           - condition: template
             value_template: >
-              {{ states.media_player.lounge.attributes.media_content_type == "tvshow" }}
+              {{ trigger.to_state.attributes.media_content_type == "tvshow" }}
 
   action:
     service: light.turn_on
@@ -135,7 +135,7 @@ automation:
             state: 'on'
           - condition: template
             value_template: >
-              {{ states.media_player.lounge.attributes.media_content_type == "movie" }}
+              {{ trigger.to_state.attributes.media_content_type == "movie" }}
         - condition: and
           conditions:
           - condition: state
@@ -143,7 +143,7 @@ automation:
             state: 'on'
           - condition: template
             value_template: >
-              {{ states.media_player.lounge.attributes.media_content_type == "tvshow" }}
+              {{ trigger.to_state.attributes.media_content_type == "tvshow" }}
 
   action:
     service: scene.turn_on
