presence: Ros new work laptop

--- a/people/ros.yaml
+++ b/people/ros.yaml
@@ -3,4 +3,4 @@ entities:
 - device_tracker.ros_phone
 - device_tracker.ros_iphone
 - device_tracker.ros_ipad
-- device_tracker.ros_ccc564630
+- device_tracker.ros_work_laptop
