--- a/packages/bedroom-mark/package.yaml
+++ b/packages/bedroom-mark/package.yaml
@@ -1,5 +1,6 @@
 homeassistant: !include homeassistant.yaml
 group: !include groups.yaml
+climate: !include climate.yaml
 scene: !include scenes.yaml
 sensor: !include sensors.yaml
 switch: !include switches.yaml
