packages: input_select

--- a/packages/guest_room/package.yaml
+++ b/packages/guest_room/package.yaml
@@ -1,7 +1,7 @@
 homeassistant: !include homeassistant.yaml
 group: !include groups.yaml
 #climate: !include climate.yaml
-#input_select: !include input_select.yaml
+input_select: !include input_select.yaml
 scene: !include scenes.yaml
 #sensor: !include sensors.yaml
 switch: !include switches.yaml
