--- a/packages/bedroom-mark/homeassistant.yaml
+++ b/packages/bedroom-mark/homeassistant.yaml
@@ -2,8 +2,13 @@ customize:
   group.marks_bedroom_scenes:
     order: 0
 
+  group.marks_bedroom_lights:
+    icon: mdi:lightbulb-on
+    emulated_hue: true
+
   light.bedroom_mark_overhead_level:
     friendly_name: "Mark's Bedroom Overhead"
+    icon: mdi:ceiling-light
   light.bedroom_mark_level_29:
     friendly_name: "Mark's Bedroom Valve"
 
