--- a/configuration.yaml
+++ b/configuration.yaml
@@ -16,6 +16,7 @@ homeassistant:
     package_hottub: !include packages/hottub.yaml
     package_washing_machine: !include packages/washing-machine.yaml
     package_stream_radio: !include packages/stream-radio.yaml
+    package_oil_monitor: !include packages/myolive.yaml
 
     package_study: !include packages/study/package.yaml
     package_kitchen: !include packages/kitchen/package.yaml
